<resources>
    <string name="app_name">MovieApp</string>
    <string name="movie_details_poster_picture_content_description">poster_picture</string>
    <string name="item_movie_poster_image_view">item_movie_poster_image_view</string>
    <string name="title_movies_list">Movies</string>
    <string name="title_movies_favorites">Favorites</string>
    <string name="title_movies_search">Search</string>
    <string name="search_view_hint_text">Movie title…</string>
    <string name="movie_details_submit_button_text">Save</string>
    <string name="facebook_app_id">414962915882652</string>
    <string name="fb_login_protocol_scheme">fb414962915882652</string>
    <string name="server_client_id">932599713517–42r9opct51k9186i3o9njb1hit894sq5.apps.googleusercontent.com</string>
    <string name="facebook_application_id" translatable="false">414962915882652</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb414962915882652</string>
    <string name="twitter_consumer_key" translatable="false">adO15ezpq137r46k1BqZiruDH</string>
    <string name="twitter_consumer_secret" translatable="false">sT24H1I1G0rsx9vxY5MiU0ZLHlkMzc0BlWBs9K6neUkTSJ92OK</string>
    <string name="add_personal_note_here">Add personal note here…</string>
    <string name="bottom_nav_recommended">Recommended</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="movies_list_toolbar_title">Recommend by:</string>
    <string name="weather_recommendation_menu_title">Weather</string>
    <string name="favorites_recommendation_menu_title">Favorites</string>
    <string name="popular_recommendation_menu_title">Popularity</string>
    <string name="actor_details_date_of_birth_label_text">Date of birth</string>
    <string name="actor_details_bio_label_text">Biography</string>
    <string name="actor_details_deathday_label_text">Deathday</string>
    <string name="actor_details_place_of_birth_label_text">Place of birth</string>
    <string name="actor_details_profession_label_text">Profession</string>
    <string name="location_unavailable_message_text">Location unavailable</string>
    <string name="no_available_data_placeholder">-</string>
    <string-array name="recommendations">
        <item>@string/popular_recommendation_menu_title</item>
        <item>@string/favorites_recommendation_menu_title</item>
        <item>@string/weather_recommendation_menu_title</item>
    </string-array>
    <string name="no_results_found">No results found</string>
    <string name="first_brewed">First brewed:</string>
    <string name="alcohol_by_volume">Alcohol by volume:</string>
    <string name="food_pairings">Food pairings</string>
    <string name="description">Description</string>
</resources>
