<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/white_gradient"
            app:layout_constraintBottom_toBottomOf="@id/movieImagesRecyclerView"
            app:layout_constraintEnd_toEndOf="@id/movieImagesRecyclerView"
            app:layout_constraintStart_toStartOf="@id/movieImagesRecyclerView"
            app:layout_constraintTop_toTopOf="@id/movieImagesRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieImagesRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profilePictureCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_smallest_margin"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/movieImagesRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profilePicture"
                android:layout_width="@dimen/cast_item_profile_picture_width"
                android:layout_height="@dimen/cast_item_profile_picture_height"
                android:background="@drawable/cast_item_background"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_large_margin_size"
            android:layout_marginEnd="@dimen/common_large_margin_size"
            android:textColor="@color/text_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movieImagesRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieImagesRecyclerView"
            tools:text="Dwayne Johnson" />

        <TextView
            android:id="@+id/professionLabel"
            style="@style/Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_large_margin_size"
            android:text="Profession"
            app:layout_constraintEnd_toEndOf="@id/nameTextView"
            app:layout_constraintStart_toStartOf="@id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/professionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/professionLabel"
            app:layout_constraintStart_toStartOf="@id/professionLabel"
            app:layout_constraintTop_toBottomOf="@+id/professionLabel"
            tools:text="Actor" />

        <TextView
            android:id="@+id/birthDayLabelText"
            style="@style/Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_small_margin_size"
            android:text="@string/actor_details_date_of_birth_label_text"
            app:layout_constraintEnd_toEndOf="@id/professionText"
            app:layout_constraintStart_toStartOf="@id/professionText"
            app:layout_constraintTop_toBottomOf="@+id/professionText" />

        <TextView
            android:id="@+id/birthDayText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/birthDayLabelText"
            app:layout_constraintStart_toStartOf="@id/birthDayLabelText"
            app:layout_constraintTop_toBottomOf="@+id/birthDayLabelText"
            tools:text="12.12.2012." />

        <TextView
            android:id="@+id/placeOfBirthLabel"
            style="@style/Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_small_margin_size"
            android:text="@string/actor_details_deathday_label_text"
            app:layout_constraintEnd_toEndOf="@id/birthDayText"
            app:layout_constraintStart_toStartOf="@id/birthDayText"
            app:layout_constraintTop_toBottomOf="@+id/birthDayText" />

        <TextView
            android:id="@+id/placeOfBirthText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/placeOfBirthLabel"
            app:layout_constraintStart_toStartOf="@id/placeOfBirthLabel"
            app:layout_constraintTop_toBottomOf="@+id/placeOfBirthLabel"
            tools:text="12.12.2012." />

        <TextView
            android:id="@+id/deathDayLabel"
            style="@style/Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_small_margin_size"
            android:text="@string/actor_details_deathday_label_text"
            app:layout_constraintEnd_toEndOf="@id/placeOfBirthText"
            app:layout_constraintStart_toStartOf="@id/placeOfBirthText"
            app:layout_constraintTop_toBottomOf="@+id/placeOfBirthText" />

        <TextView
            android:id="@+id/deathDayText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/deathDayLabel"
            app:layout_constraintStart_toStartOf="@id/deathDayLabel"
            app:layout_constraintTop_toBottomOf="@+id/deathDayLabel"
            tools:text="12.12.2012." />

        <TextView
            android:id="@+id/bioLabel"
            style="@style/Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_small_margin_size"
            android:text="@string/actor_details_bio_label_text"
            app:layout_constraintEnd_toEndOf="@id/deathDayText"
            app:layout_constraintStart_toStartOf="@id/deathDayText"
            app:layout_constraintTop_toBottomOf="@id/deathDayText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/common_large_margin_size"
            android:isScrollContainer="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/bioLabel"
            app:layout_constraintStart_toStartOf="@id/bioLabel"
            app:layout_constraintTop_toBottomOf="@id/bioLabel"
            tools:text="AOWINDOIAWNDOIANWDOINAWODINAOWIDNOAWNIDOWAINDOAINW\nDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDOnDOAIWNDOIAWNDOAWINDOAIWNDOIANWDONAWDOINAWODNIAWOIDNOAWINDO\nAWINDOWAINDOAWINDOAIWNDOAIWNDOAWNIDOAINWDOAWNIDOAWNIDOAINWDOAWINDOIAWNDOAIWNDONAIWDONAIWDOIANWDOIAWNDOIANWDNOAIWDOAWINDOAIWNDOWAINDOANIDOAIWNDOAWIND" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>